<resources>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="app_name">NFD</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_string">""</string>
    <string name="question_mark">\?</string>
    <string name="service_name">NFD Service</string>
    <string name="action_settings">Settings</string>
    <string name="nfd_stopped">NFD is stopped</string>
    <string name="nfd_started">NFD is started</string>
    <string name="stopping_nfd">Stopping NFD …</string>
    <string name="starting_nfd">Starting NFD …</string>
    <string name="reconnect_to_nfd">Reconnecting to NFD Service …</string>
    <string name="loading_logger">Loading logger …</string>
    <string name="log_settings">Log Settings</string>
    <string name="checking_on_nfd">Checking on NFD Service …</string>
    <string name="accessibility_open_drawer">Open NFD Navigation Drawer</string>
    <string name="accessibility_close_drawer">Close NFD Navigation Drawer</string>
    <string name="drawer_item_general">Status</string>
    <string name="drawer_item_faces">Faces</string>
    <string name="drawer_item_routes">Routes</string>
    <string name="drawer_item_ping">Ping</string>
    <string name="drawer_item_strategies">Strategies</string>
    <string name="drawer_item_logcat">Logcat</string>
    <string name="drawer_item_wifidirect">WiFi Direct</string>
    <string name="fragment_wifidirect_label_me">Me: </string>
    <string name="fragment_wifidirect_title">NDN Over WiFi Direct</string>
    <string name="fragment_wifidirect_group_conn_status">Group connection status: </string>
    <string name="fragment_wifidirect_is_group_own">Is group owner: </string>
    <string name="fragment_wifidirect_text_group_connected">Connected to group.</string>
    <string name="fragment_wifidirect_text_group_scanning">Scanning...</string>
    <string name="fragment_wifidirect_text_group_wifi_p2p_disabled">WIFI p2p is disabled</string>
    <string name="fragment_wifidirect_curr_ip">Current WiFi Direct IP: </string>
    <string name="fragment_wifidirect_connected_peers">Connected Peers: </string>
    <string name="fragment_wifidirect_discovered_peers">Discovered Peers: </string>
    <string name="fragment_wifidirect_toast_connected_to_group">Currently connected to a group, please disconnect first</string>
    <string name="fragment_wifidirect_toast_peer_no_longer_available">The peer is no longer available</string>
    <string name="fragment_wifidirect_toast_connection_works_well">Connection is working correctly</string>
    <string name="fragment_wifidirect_toast_didnt_get_response">Didn\'t get responses in the last\u0020</string>
    <string name="fragment_wifidirect_toast_seconds">\u0020seconds</string>
    <string name="fragment_wifidirect_dialog_cancel_invitation">Cancel invitation for\u0020</string>
    <string name="fragment_wifidirect_dialog_cancelling">Cancelling</string>
    <string name="fragment_wifidirect_dialog_cancelling_invitation">Cancelling invitation for\u0020</string>
    <string name="fragment_wifidirect_dialog_disconnect_from">Disconnect from\u0020</string>
    <string name="fragment_wifidirect_dialog_disconnecting">Disconnecting</string>
    <string name="fragment_wifidirect_dialog_disconnecting_from">Disconnecting from\u0020</string>
    <string name="fragment_wifidirect_dialog_invite">Invite\u0020</string>
    <string name="fragment_wifidirect_dialog_inviting">Inviting\u0020</string>
    <string name="fragment_wifidirect_dialog_join_group">\u0020to join a group</string>
    <string name="fragment_wifidirect_dialog_destroy_group_alter">\u0020Because you are the group owner, disconnecting from a device will also destroy the group.</string>
    <string name="menu_item_delete_setting_item">Delete</string>
    <string name="fragment_logcat_general_operations_category">General Actions</string>
    <string name="fragment_logcat_tags_n_log_levels">Tags &amp; Log Levels</string>
    <string name="logcat_reset_log_level_defaults">Reset Log Level Defaults</string>
    <string name="reset_log_level_dialog_title">Select default value for all tags</string>
    <string name="route_list_actions_title">Route List Actions</string>
    <string name="oops">Oops!</string>
    <string name="error_cannot_communicate_with_nfd">Not available, check that NFD is started</string>
    <string name="route_list_list_of_routes_title">List of Routes</string>
    <string name="route_list_refresh_route_list">Refresh Route List</string>
    <string name="route_list_add_route">Add Route</string>
    <string name="route_list_add_route_edit_face_hint">Face URI or Face ID</string>
    <string name="route_list_delete_route_dialog_titile">Deleting Route</string>
    <string name="route_list_delete_route_dialog_warning">Are you sure you want to delete</string>
    <string name="route_list_delete_route_item">Delete</string>
    <string name="dialog_add_route_edit_title">Enter prefix and FaceUri or FaceID to register with NFD</string>
    <string name="dialog_add_route_edit_prefix_hint">Prefix</string>
    <string name="dialog_add_route_edit_face_uri_hint">Face URI</string>
    <string name="dialog_add_route_or_face_as_permanent">Keep it permanent</string>
    <string name="face_list_actions_title">Face List Actions</string>
    <string name="face_list_refresh_face_list">Refresh Face List</string>
    <string name="face_list_list_of_faces_title">List of Faces</string>
    <string name="face_list_add_face">Add Face</string>
    <string name="face_list_delete_face_dialog_title">Deleting face</string>
    <string name="face_list_delete_face_dialog_warning">Are you sure you want to delete face:</string>
    <string name="dialog_add_face_edit_title">Enter FaceUri for the remote NFD</string>
    <string name="dialog_face_list_add_route_edit_title">Enter prefix to register with NDN NFD</string>
    <string name="fragment_face_details_title">Face Details</string>
    <string name="menu_item_delete_face_item">Delete</string>
    <string name="menu_item_add_route">Add Route</string>
    <string name="menu_item_face_details">Face Details</string>
    <string name="expire_never">Never</string>
    <string name="face_id">Face ID</string>
    <string name="face_uri">Face URI</string>
    <string name="local_face_uri">Local FaceURI</string>
    <string name="remote_face_uri">Remote FaceURI</string>
    <string name="expires_in">Expires in</string>
    <string name="face_scope">Face scope</string>
    <string name="face_persistency">Face persistency</string>
    <string name="link_type">Link type</string>
    <string name="in_interests">In interests</string>
    <string name="out_interests">Out interests</string>
    <string name="in_data">In data</string>
    <string name="out_data">Out data</string>
    <string name="in_bytes">In bytes</string>
    <string name="out_bytes">Out bytes</string>
    <string name="in_nacks">In NACKs</string>
    <string name="out_nacks">Out NACKs</string>

    <string-array name="face_scopes">
        <item>Non-local</item>
        <item>Local</item>
    </string-array>

    <string-array name="face_persistency">
        <item>Persistent</item>
        <item>On-demand</item>
        <item>Permanent</item>
    </string-array>

    <string-array name="face_link_types">
        <item>Point-to-point</item>
        <item>Multi-access</item>
    </string-array>

    <string name="face_add_dialog_create_face">Create face</string>
    <string name="route_add_dialog_create_route">Create route</string>
    <string name="connect_nearest_hub_automatically">Connect to the nearest hub automatically</string>
    <string name="enable_unsolicited_caching">Enable unsolicited data caching</string>
    <string name="ndn_fch_website">http://ndn-fch.named-data.net/</string>
    <string name="fragment_route_list_toast_cannot_connect_hub">Cannot connect to the nearest hub</string>
    <string name="fragment_route_details_title">Route Details</string>
    <string name="fragment_route_details_next_hops">List of next hops</string>
    <string name="fragment_route_route_name_title">Route Name</string>
    <string name="ping_client_prefix_hint">Prefix (e.g., /ndn/edu/arizona)</string>

    <string name="notification_content_title">Status</string>
    <string name="notification_content_text">NFD is running</string>
    <string name="channel_description">NDN Android notification.</string>
    <string name="faces">Faces</string>
    <string name="route">Route</string>
</resources>
