<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_status"
            android:title="@string/drawer_item_general" />
        <item
            android:id="@+id/nav_faces"
            android:icon="@drawable/ic_faces"
            android:title="@string/drawer_item_faces" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_route"
            android:title="@string/drawer_item_routes" />
        <item
            android:id="@+id/nav_ping"
            android:icon="@drawable/ic_ping"
            android:title="@string/drawer_item_ping" />
        <item
            android:id="@+id/nav_wifidirect"
            android:icon="@drawable/ic_wifidirect"
            android:title="@string/drawer_item_wifidirect" />
    </group>
</menu>