<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/default_dialog_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_face_list_add_route_edit_title"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/face_list_add_route_prefix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/default_dialog_margin"
        android:hint="@string/dialog_add_route_edit_prefix_hint"
        android:inputType="text"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:selectAllOnFocus="true">
        <requestFocus />
    </EditText>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_route_or_face_as_permanent"
        android:id="@+id/face_list_add_route_permanent"
        android:layout_gravity="center_horizontal"
        android:checked="false" />

</LinearLayout>